gcc/testsuite/gdc.test/compilable/test71.d
import imports.test71;

void bar()
{
    imports.test71.foo();
}
