gcc/testsuite/gdc.test/fail_compilation/imports/test21164a.d
struct D(E)
{
    void G()    {
        import imports.test21164d;
        I;
    }

}
